# libelas

./: CMakeLists.txt  README.TXT
src/: elas.cpp  filter.cpp  filter.h  iio.c  iio.h  main.cpp
